--- a/www/css/drinKit.css
+++ b/www/css/drinKit.css
@@ -87,8 +87,7 @@ html {
   padding: 2px;
   margin: 4px 0;
 }
-.button,
-.button:hover {
+.button {
   cursor: default;
   user-select: none;
   box-sizing: border-box;
@@ -100,9 +99,26 @@ html {
   border-radius: 3px;
   color: black;
   background: #FCFCFC -webkit-linear-gradient(top, #FCFCFC, #dadada);
+  text-align: center;
 }
 .button:hover {
   background: #FCFCFC -webkit-linear-gradient(top, #ffffff, #ebebeb);
+}
+.button-filter-on {
+  color: #EEEEEE;
+  background: #63a045 -webkit-linear-gradient(top, #63a045, #417e23);
+  border-color: #1f5c01;
+}
+.button-filter-on:hover {
+  background: #63a045 -webkit-linear-gradient(top, #74b156, #528f34);
+}
+.button-filter-off {
+  color: #EEEEEE;
+  background: #a0341e -webkit-linear-gradient(top, #a0341e, #7e1200);
+  border-color: #5c0000;
+}
+.button-filter-off:hover {
+  background: #a0341e -webkit-linear-gradient(top, #b1452f, #8f230d);
 }
 .login-button {
   float: right;
@@ -114,4 +130,78 @@ html {
   margin: 0;
   padding: 0;
   opacity: 0;
+}
+.filter-buttons {
+  margin-right: 40px;
+}
+.filter-buttons li {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+}
+.reload {
+  float: right;
+  height: inherit;
+}
+.drink-box {
+  display: inline-block;
+}
+.drink-box a > div {
+  position: relative;
+  margin: 3px 5px;
+  border-radius: 3px;
+  background: rgba(3, 89, 127, 0.25) -webkit-linear-gradient(top, rgba(20, 106, 144, 0.25), rgba(3, 89, 127, 0.25));
+  overflow: hidden;
+}
+.drink-box a > div .name {
+  position: absolute;
+  top: 0;
+  left: 110px;
+  font-size: 20px;
+}
+.drink-box a > div .description {
+  padding: 10px 10px 0 10px;
+}
+.drink-box a > div .ingredients {
+  padding-top: 0px;
+  font-style: italic;
+  color: #555;
+  font-size: 10px;
+}
+.drink-box a > div .drink-info {
+  position: relative;
+  margin-top: -5px;
+  background-color: #E2E2E2;
+}
+.drink-box a > div p {
+  padding: 10px;
+  margin: 0;
+}
+@media all and (max-width: 767px) {
+  .drink-box {
+    width: 100%;
+  }
+}
+@media all and (min-width: 768px) {
+  .drink-box {
+    width: 50%;
+  }
+}
+@media all and (min-width: 1200px) {
+  .drink-box {
+    width: 33.333%;
+  }
+}
+.drink-box img {
+  width: 100px;
+  height: 100px;
+}
+.drinks-area {
+  position: absolute;
+  padding: 0 10px 0 10px;
+  overflow-y: auto;
+  bottom: 0;
+  top: 59px;
+  left: 0;
+  right: 0;
 }
