--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -1,55 +1,51 @@
 <div class="view-wrapper">
     <ul class="filter-buttons">
         <li>
-            <a class="button btn-success">
+            <div class="button button-filter-on">
                 Cocktails
-            </a>
+            </div>
         </li>
         <li>
-            <a class="button btn-success  btn-danger">
+            <div class="button button-filter-on">
                 Mocktails
-            </a>
+            </div>
         </li>
         <li>
-            <a class="button btn-danger">
-                Smoothies
-            </a>
-        </li>
-        <li>
-            <a class="button btn-success">
+            <div class="button button-filter-on">
                 Milkshakes
-            </a>
+            </div>
         </li>
         <li>
-            <a class="button btn-default right">
+            <div class="button button-filter-off">
+                Smoothies
+            </div>
+        </li>
+        <li class="reload">
+            <div class="button">
                 Reload
-                <i class="glyphicon glyphicon-refresh"></i>
-            </a>
+            </div>
         </li>
 
     </ul>
-    <div>
-        <div>
-            <div ng-repeat="drink in drinks">
-                <a ng-click="goToDrink(drink.id)">
-                    <div class="drink-box">
-                        <img src="{{drink.url}}">
-                        <div class="drink-info">
-                            <h1>{{drink.name}}</h1>
-                            <p>{{drink.description}}</p>
-                            <p>Rum, Coke, More Rum, More Coke</p>
-                        </div>
+    <div class="drinks-area">
+        <div ng-repeat="drink in drinks" class="drink-box">
+            <a ng-click="goToDrink(drink.id)">
+                <div>
+                    <img src="{{drink.url}}">
+                    <h1 class="name">{{drink.name}}</h1>
+                    <div class="drink-info">
+                        <p class="description"><strong>{{drink.description}}</strong></p>
+                        <p class="ingredients">Rum, Coke, More Rum, More Coke</p>
                     </div>
-                </a>
-            </div>
-            <div>
-                <a ng-click="goToDrink(0)">
-                    <div class="drink-box new-drink-button">
-                        <i class="glyphicon glyphicon-plus text-muted"></i>
-                    </div>
-                </a>
-            </div>
+                </div>
+            </a>
         </div>
-
+        <div>
+            <a ng-click="goToDrink(0)">
+                <div class="drink-box new-drink-button">
+                    <i class="glyphicon glyphicon-plus text-muted"></i>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
