Increase columns to 4 on large screens

--- a/www/css/drinKit.less
+++ b/www/css/drinKit.less
@@ -204,14 +204,17 @@ html {
     }
   }
   display: inline-block;
-  @media all and (max-width: 767px) {
+  @media all and (max-width: 800px) {
     width: 100%;
   }
-  @media all and (min-width: 768px ) {
+  @media all and (min-width: 801px ) {
     width: 50%;
   }
   @media all and (min-width: 1200px) {
     width: 33.333%;
+  }
+  @media all and (min-width: 1800px) {
+    width: 25%;
   }
   img {
     width: 100px;
