--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -23,6 +23,7 @@
         <li class="reload">
             <div class="button">
                 Reload
+                <img src="img/reload.png">
             </div>
         </li>
 
