--- a/www/css/drinKit.css
+++ b/www/css/drinKit.css
@@ -4,7 +4,7 @@
 }
 html {
   position: absolute;
-  font-family: system-ui, sans-serif;
+  font-family: 'PT Sans', sans-serif;
   background: -webkit-radial-gradient(center, circle, #1CBDED, #368CB2);
   width: 100%;
   height: 100%;
@@ -151,6 +151,10 @@ html {
   float: right;
   height: inherit;
 }
+.reload img {
+  margin: -2px;
+  vertical-align: text-bottom;
+}
 .drink-box {
   display: inline-block;
 }
@@ -252,6 +256,9 @@ html {
 .drink-settings [type="text"] {
   height: 27px;
 }
+.drink-settings textarea {
+  min-height: 50px;
+}
 .drink-settings .option-area {
   position: absolute;
   top: 47px;
@@ -317,7 +324,7 @@ html {
 }
 .ingredient-info {
   position: absolute;
-  top: 5px;
+  top: 30px;
   right: 0px;
   bottom: 0px;
   left: 160px;
