--- a/www/css/drinKit.less
+++ b/www/css/drinKit.less
@@ -125,6 +125,10 @@ html {
     padding: 2px;
     margin: 4px 0;
   }
+  .failed {
+    background-color: #FFAAAA;
+    border-color: #FF7777;
+  }
 }
 
 .button {
@@ -211,12 +215,12 @@ html {
     overflow: hidden;
     .name {
       position: absolute;
-      top: 0;
+      top: 15px;
       left: 110px;
       font-size: 20px;
     }
     .description {
-      padding: 10px 10px 0 10px;
+      padding: 10px;
     }
     .ingredients {
       padding-top: 0;
@@ -234,7 +238,6 @@ html {
       margin: 0;
     }
   }
-  display: inline-block;
   @media all and (max-width: 800px) {
     width: 100%;
   }
