Implement early data loading for drinks

--- a/www/css/drinKit.less
+++ b/www/css/drinKit.less
@@ -4,7 +4,7 @@
 @drinKitFilterGreen: #63a045;
 @drinKitFilterRed: #a0341e;
 @drinKitForm: #333;
-@drinKitFont: "fonts/PT_Sans.ttf";
+//@drinKitFont: "fonts/PT_Sans.ttf";
 @logoSize: 200px;
 
 .radial(@location, @start, @end) {
@@ -38,10 +38,10 @@
   left: @left;
 }
 
-@font-face {
-  font-family: 'PT Sans';
-  src: url(@drinKitFont);
-}
+//@font-face {
+//  font-family: 'PT Sans';
+//  src: url(@drinKitFont);
+//}
 
 html {
   position: absolute;
