--- a/www/templates/drinks.html
+++ b/www/templates/drinks.html
@@ -42,9 +42,9 @@
                 </a>
             </div>
             <div class="drink-box">
-                <a ng-click="goToDrink(0)">
-                    <div class="drink-box new-drink-button">
-                        <i class="glyphicon glyphicon-plus text-muted"></i>
+                <a ng-click="createDrink()">
+                    <div class="new-drink-button">
+                        <span>+</span>
                     </div>
                 </a>
             </div>
