temporarily complete breaking line

--- a/www/templates/drink.html
+++ b/www/templates/drink.html
@@ -105,7 +105,7 @@
             <div class="ingredient-info">
                 <span>Equipment</span>
                 <br />
-                <select ng-options="e as e.Text for e in $root.equipment" ng-model="equipmentz["></select>
+                <select ng-options="e as e.Text for e in $root.equipment" ng-model="$root.eq"></select>
             </div>
         </div>
         <div class="option-area steps-area" ng-show="tab=='steps'">
